homeassistant/_homeassistant.deployment.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: homeassistant
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant
        imagePullPolicy: Always
        ports:
        - containerPort: 8123
          name: homeassistant
        volumeMounts:
        - name: homeassistant-config
          mountPath: /config
        - name: localtime
          mountPath: /etc/localtime
        # securityContext:
        #   privileged: true
      volumes:
      - name: homeassistant-config
        nfs:
          server: 192.168.1.128
          path: /volume1/configs/homeassistant/homeassistant
      - name: localtime
        hostPath:
          path: /etc/localtime
      # - name: dev-zwave
      #   hostPath:
      #     path: /dev/usbzwave
      # - name: dev-insteon
      #   hostPath:
      #     path: /dev/usbinsteon
