homeassistant/_homeassistant.svc.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-nodeport
  labels:
    app: homeassistant
spec:
  selector:
    app: homeassistant
  type: NodePort
  ports:
    - name: homeassistant
      port: 8123
      targetPort: 8123
  externalIPs:
    - 192.168.1.150
