homeassistant/homeassistant.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - name: homeassistant
      port: 80
      targetPort: 8123
